Recommended music is generated. 50 songs from 5 artists for each genre could also add recommendation in genres based on artists. Country playlist are generated and their content is also generated when selected.

--- a/public/index.html
+++ b/public/index.html
@@ -166,80 +166,13 @@
 
                 <div class="music-list">
                     <div class="header">
-                        <h5>Top Songs</h5>
-                        <a href="/topSongs">View more</a>
+                        <h5>Recommendations</h5>
+                        <a href="/recommendations">View more</a>
                     </div>
 
                 
-                <div class="items">
-                    <div class="item">
-                        <div class="info">
-                            <p>01</p>
-                            <img src="assets/song-1.png">
-                            <div class="details">
-                                <h5>Cover Me Up</h5>
-                                <p>Morgan Wallen</p>
-                            </div>
-                        </div>
-                        <div class="actions">
-                            <p>03:45</p>
-                            <div class="icon">
-                                <i class='bx bxs-right-arrow' ></i>
-                            </div>
-                            <i class='bx bxs-plus-square' ></i>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="info">
-                            <p>02</p>
-                            <img src="assets/song-2.png">
-                            <div class="details">
-                                <h5>Cosmic Love</h5>
-                                <p>Florence and the Machine</p>
-                            </div>
-                        </div>
-                        <div class="actions">
-                            <p>05:30</p>
-                            <div class="icon">
-                                <i class='bx bxs-right-arrow' ></i>
-                            </div>
-                            <i class='bx bxs-plus-square' ></i>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="info">
-                            <p>03</p>
-                            <img src="assets/song-3.png">
-                            <div class="details">
-                                <h5>No Guidance</h5>
-                                <p>Chris Brown</p>
-                            </div>
-                        </div>
-                        <div class="actions">
-                            <p>04:12</p>
-                            <div class="icon">
-                                <i class='bx bxs-right-arrow' ></i>
-                            </div>
-                            <i class='bx bxs-plus-square' ></i>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="info">
-                            <p>04</p>
-                            <img src="assets/song-4.png">
-                            <div class="details">
-                                <h5>Halo</h5>
-                                <p>Beyonce</p>
-                            </div>
-                        </div>
-                        <div class="actions">
-                            <p>03:10</p>
-                            <div class="icon">
-                                <i class='bx bxs-right-arrow' ></i>
-                            </div>
-                            <i class='bx bxs-plus-square' ></i>
-                        </div>
-                    </div>
+                <div id="recommendations-holder" class="items">
+
                 </div>
             </div>
         </div>
