--- a/public/main.html
+++ b/public/main.html
@@ -119,127 +119,8 @@
             </header>
 
             <div class="trending">
-                <div class="left">
-                    <div class="info">
-                        <img src="assets/trend.png">
-                        <h2>Empty Space</h2>
-                        <h4>James Arthur</h4>
-                        <h5>3:15</h5>
-                        <div class="buttons">
-                            <button><a href="/playlist">View Now</a></button>
-                            <i class='bx bxs-heart' ></i>
-                        </div>
-                    </div>
-                    <div class="info">
-                        <img src="assets/trend.png">
-                        <h2>Empty Space</h2>
-                        <h4>James Arthur</h4>
-                        <h5>3:15</h5>
-                        <div class="buttons">
-                            <button>View Now</button>
-                            <i class='bx bxs-heart' ></i>
-                        </div>
-                    </div>
-                    <div class="info">
-                        <img src="assets/trend.png">
-                        <h2>Empty Space</h2>
-                        <h4>James Arthur</h4>
-                        <h5>3:15</h5>
-                        <div class="buttons">
-                            <button>View Now</button>
-                            <i class='bx bxs-heart' ></i>
-                        </div>
-                    </div>
-                    <div class="info">
-                        <img src="assets/trend.png">
-                        <h2>Empty Space</h2>
-                        <h4>James Arthur</h4>
-                        <h5>3:15</h5>
-                        <div class="buttons">
-                            <button>View Now</button>
-                            <i class='bx bxs-heart' ></i>
-                        </div>
-                    </div>
-                    <div class="info">
-                        <img src="assets/trend.png">
-                        <h2>Empty Space</h2>
-                        <h4>James Arthur</h4>
-                        <h5>3:15</h5>
-                        <div class="buttons">
-                            <button>View Now</button>
-                            <i class='bx bxs-heart' ></i>
-                        </div>
-                    </div>
-                    <div class="info">
-                        <img src="assets/trend.png">
-                        <h2>Empty Space</h2>
-                        <h4>James Arthur</h4>
-                        <h5>3:15</h5>
-                        <div class="buttons">
-                            <button>View Now</button>
-                            <i class='bx bxs-heart' ></i>
-                        </div>
-                    </div>
-                    <div class="info">
-                        <img src="assets/trend.png">
-                        <h2>Empty Space</h2>
-                        <h4>James Arthur</h4>
-                        <h5>3:15</h5>
-                        <div class="buttons">
-                            <button>View Now</button>
-                            <i class='bx bxs-heart' ></i>
-                        </div>
-                    </div>
-                    <div class="info">
-                        <img src="assets/trend.png">
-                        <h2>Empty Space</h2>
-                        <h4>James Arthur</h4>
-                        <h5>3:15</h5>
-                        <div class="buttons">
-                            <button>View Now</button>
-                            <i class='bx bxs-heart' ></i>
-                        </div>
-                    </div>
-                    <div class="info">
-                        <img src="assets/trend.png">
-                        <h2>Empty Space</h2>
-                        <h4>James Arthur</h4>
-                        <h5>3:15</h5>
-                        <div class="buttons">
-                            <button>View Now</button>
-                            <i class='bx bxs-heart' ></i>
-                        </div>
-                    </div>
-                    <div class="info">
-                        <img src="assets/trend.png">
-                        <h2>Empty Space</h2>
-                        <h4>James Arthur</h4>
-                        <h5>3:15</h5>
-                        <div class="buttons">
-                            <button>View Now</button>
-                            <i class='bx bxs-heart' ></i>
-                        </div>
-                    </div>
-                    <div class="info">
-                        <img src="assets/trend.png">
-                        <h2>Empty Space</h2>
-                        <h4>James Arthur</h4>
-                        <h5>3:15</h5>
-                        <div class="buttons">
-                            <button>View Now</button>
-                            <i class='bx bxs-heart' ></i>
-                        </div>
-                    </div>
-                    <div class="info">
-                        <img src="assets/trend.png">
-                        <h2>Empty Space</h2>
-                        <h4>James Arthur</h4>
-                        <h5>3:15</h5>
-                        <div class="buttons">
-                            <button>View Now</button>
-                            <i class='bx bxs-heart' ></i>
-                        </div>
-                    </div>
+                <div id="playlist-container" class="left">
+                   
                 </div>
             </div>
 
