--- a/public/recommendations.html
+++ b/public/recommendations.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="genres.css">
+    <link rel="stylesheet" href="recommendations.css">
     <title>Music Player Platform</title>
 </head>
 <body>
@@ -29,7 +29,7 @@
                     </li>
                     <li>
                         <i class='bx bxs-music' ></i>
-                        <a href="#">Genres</a>
+                        <a href="/genres">Genres</a>
                     </li>
                     <li>
                         <i class='bx bxs-album' ></i>
@@ -118,90 +118,18 @@
 
             </header>
 
-
-            <div class="playlist">
-                <div class="genres">
+        <div class="playlist">
+            <div class="music-list">
                     <div class="header">
-                        <h5>Genres</h5>
+                        <h5>Recommendations</h5>
                     </div>
 
-                    <div class="items">
-                        <div class="item">
-                            <img src="assets/genres/sergei-sushchik-Dyo5xZX687M-unsplash.jpg" alt="">
-                            <p>Alternative<br>Country</p>
-                        </div>
-                        <div class="item">
-                            <img src="assets/genres/ben-white-iPyQg9QfepM-unsplash.jpg" alt="">
-                            <p>Blues<br>Country</p>
-                        </div>
-                        <div class="item">
-                            <img src="assets/genres/israel-palacio-Y20JJ_ddy9M-unsplash.jpg" alt="">
-                            <p>Country<br>Rap</p>
-                        </div>
-                        <div class="item">
-                            <img src="assets/genres/katherine-hanlon-pOraJAwCFRo-unsplash.jpg" alt="">
-                            <p>Country<br>Soul</p>
-                        </div>
-                        <div class="item">
-                            <img src="assets/genres/pexels-mikotoraw-photographer-3769099.jpg" alt="">
-                            <p>Country<br>Rock</p>
-                        </div>
-                        <div class="item">
-                            <img src="assets/genres/priscilla-du-preez-de-HbaYzZqA-unsplash.jpg" alt="">
-                            <p>Country<br>Pop</p>
-                        </div>
-                        <div class="item">
-                            <img src="assets/genres/pexels-sharefaith-1202723.jpg" alt="">
-                            <p>Americana</p>
-                        </div>
-                        <div class="item">
-                            <img src="assets/genres/pexels-wolfgang-weiser-17729930.jpg" alt="">
-                            <p>Bluegrass</p>
-                        </div>
-                        <div class="item">
-                            <img src="assets/genres/tony-pham-T0BqG4PnUdg-unsplash.jpg" alt="">
-                            <p>Honky<br>Tonk</p>
-                        </div>
-                        <div class="item">
-                            <img src="assets/genres/pexels-elise-bunting-2453636.jpg" alt="">
-                            <p>Cowboy<br>Country</p>
-                        </div>
-                        <div class="item">
-                            <img src="assets/genres/pexels-noel-mcshane-1036148.jpg" alt="">
-                            <p>Texas<br>Country</p>
-                        </div>
-                        <div class="item">
-                            <img src="assets/genres/pexels-david-dibert-635699.jpg" alt="">
-                            <p>Christian<br>Country</p>
-                        </div>
-                        <div class="item">
-                            <img src="assets/genres/pexels-wendy-wei-1190297.jpg" alt="">
-                            <p>Bro<br>Country</p>
-                        </div>
-                        <div class="item">
-                            <img src="assets/genres/lucia-macedo-xXLT52bAzkk-unsplash.jpg" alt="">
-                            <p>Outlaw<br>Country</p>
-                        </div>
-                        <div class="item">
-                            <img src="assets/genres/pexels-pixabay-206648.jpg" alt="">
-                            <p>Neotradtional<br>Country</p>
-                        </div>
-                        <div class="item">
-                            <img src="assets/genres/pexels-pixabay-235725.jpg" alt="">
-                            <p>Western<br>Swing</p>
-                        </div>
-                        <div class="item">
-                            <img src="assets/genres/jen-theodore-VgvTHoWmEfY-unsplash.jpg" alt="">
-                            <p>Australian<br>Country</p>
-                        </div>
-                        <div class="item">
-                            <img src="assets/genres/pexels-tobi-518557.jpg" alt="">
-                            <p>Country<br>Folk</p>
-                        </div>
-                    </div>
+                
+                <div class="items">
 
                 </div>
-            </div>    
+            </div>
+        </div>
         </main>
 
         <div class="right-section">
@@ -261,6 +189,6 @@
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/spotify-web-api-node/5.1.1/spotify-web-api-node.min.js"></script>
-    <script src="genres.js"></script>
+    <script src="recommendations.js"></script>
 </body>
 </html>
