--- a/public/playlist.html
+++ b/public/playlist.html
@@ -119,7 +119,7 @@
             </header>
 
             <div class="trending">
-                <div class="left">
+                <!-- <div class="left">
                     <div class="info">
                         <h2>Country Jam</h2>
                         <h4>The UK's most popular country playlist.</h4>
@@ -130,14 +130,14 @@
                         </div>
                     </div>
                 </div>
-                <img src="assets/trend.png">
+                <img src="assets/trend.png"> -->
             </div>
 
 
             <div class="playlist">
                 <div class="music-list">
                     <div class="items">
-                        <div class="item">
+                        <!-- <div class="item">
                             <div class="info">
                                 <p>01</p>
                                 <img src="assets/song-1.png">
@@ -476,7 +476,7 @@
                                 </div>
                                 <i class='bx bxs-plus-square' ></i>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -539,5 +539,6 @@
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/spotify-web-api-node/5.1.1/spotify-web-api-node.min.js"></script>
+    <script src="playlist.js"></script>
 </body>
 </html>
