--- a/public/recommendations.html
+++ b/public/recommendations.html
@@ -33,7 +33,7 @@
                     </li>
                     <li>
                         <i class='bx bxs-album' ></i>
-                        <a href="#">Albums</a>
+                        <a href="/albums">Albums</a>
                     </li>
                     <li>
                         <i class='bx bxs-microphone' ></i>
@@ -105,9 +105,8 @@
                     <button class="menu-btn" id="menu-open">
                         <i class='bx bx-food-menu' ></i>
                     </button>
-                    <a href="/country">Male</a>
-                    <a href="/country">Female</a>
-                    <a href="/country">Collab</a>
+                    <a href="/country">Most Popular</a>
+                    <a href="/new">New and Hot</a>
                 </div>
 
                 <div class="search">
