--- a/public/main.html
+++ b/public/main.html
@@ -33,7 +33,7 @@
                     </li>
                     <li>
                         <i class='bx bxs-album' ></i>
-                        <a href="#">Albums</a>
+                        <a href="/albums">Albums</a>
                     </li>
                     <li>
                         <i class='bx bxs-microphone' ></i>
@@ -51,7 +51,7 @@
                     </li>
                     <li>
                         <i class='bx bxs-photo-album' ></i>
-                        <a href="#">Albums</a>
+                        <a href="/albums">Albums</a>
                     </li>
                     <li>
                         <i class='bx bxs-heart' ></i>
@@ -105,9 +105,8 @@
                     <button class="menu-btn" id="menu-open">
                         <i class='bx bx-food-menu' ></i>
                     </button>
-                    <a href="#">Male</a>
-                    <a href="#">Female</a>
-                    <a href="#">Collab</a>
+                    <a href="/country">Most Popular</a>
+                    <a href="/new">New and Hot</a>
                 </div>
 
                 <div class="search">
@@ -125,10 +124,7 @@
             </div>
 
             <section id="pagination">
-                <a href="#">1</a>
-                <a href="#">2</a>
-                <a href="#">3</a>
-                <a href="#"><i class="bx bx-right-arrow-alt"></i></a>
+
             </section>
         </main>
 
