--- a/public/selectedAlbum.html
+++ b/public/selectedAlbum.html
@@ -538,6 +538,6 @@
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/spotify-web-api-node/5.1.1/spotify-web-api-node.min.js"></script>
-    <script src="playlist.js"></script>
+    <script src="selectedAlbum.js"></script>
 </body>
 </html>
