artists route working showing popular country artists formatted correctly. Can selected to view the artists albums and then view that albums songs.

--- a/public/genres.html
+++ b/public/genres.html
@@ -29,15 +29,15 @@
                     </li>
                     <li>
                         <i class='bx bxs-music' ></i>
-                        <a href="#">Genres</a>
+                        <a href="/genres">Genres</a>
                     </li>
                     <li>
                         <i class='bx bxs-album' ></i>
-                        <a href="#">Albums</a>
+                        <a href="/albums">Albums</a>
                     </li>
                     <li>
                         <i class='bx bxs-microphone' ></i>
-                        <a href="#">Artists</a>
+                        <a href="/artists">Artists</a>
                     </li>
                 </ul>
             </div>
