--- a/public/selectedArtist.html
+++ b/public/selectedArtist.html
@@ -51,7 +51,7 @@
                     </li>
                     <li>
                         <i class='bx bxs-photo-album' ></i>
-                        <a href="/albums">Albums</a>
+                        <a href="#">Albums</a>
                     </li>
                     <li>
                         <i class='bx bxs-heart' ></i>
@@ -118,7 +118,7 @@
             </header>
 
             <div class="trending">
-                <div id="playlist-container" class="left">
+                <div id="albums-container" class="left">
                    
                 </div>
             </div>
@@ -185,6 +185,6 @@
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/spotify-web-api-node/5.1.1/spotify-web-api-node.min.js"></script>
-    <script src="new.js"></script>
+    <script src="selectedArtist.js"></script>
 </body>
 </html>
