--- a/public/genreSongs.html
+++ b/public/genreSongs.html
@@ -33,11 +33,11 @@
                     </li>
                     <li>
                         <i class='bx bxs-album' ></i>
-                        <a href="#">Albums</a>
+                        <a href="/albums">Albums</a>
                     </li>
                     <li>
                         <i class='bx bxs-microphone' ></i>
-                        <a href="#">Artists</a>
+                        <a href="/artists">Artists</a>
                     </li>
                 </ul>
             </div>
