--- a/public/recommendations.html
+++ b/public/recommendations.html
@@ -37,7 +37,7 @@
                     </li>
                     <li>
                         <i class='bx bxs-microphone' ></i>
-                        <a href="#">Artists</a>
+                        <a href="/artists">Artists</a>
                     </li>
                 </ul>
             </div>
