added the categories of relaxation and party to the menu fill with playlists linked to them.

--- a/public/party.html
+++ b/public/party.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="recommendations.css">
+    <link rel="stylesheet" href="main.css">
     <title>Music Player Platform</title>
 </head>
 <body>
@@ -121,18 +121,15 @@
 
             </header>
 
-        <div class="playlist">
-            <div class="music-list">
-                    <div class="header">
-                        <h5 id="genre-header"></h5>
-                    </div>
-
-                
-                <div class="items">
-
+            <div class="trending">
+                <div id="playlist-container" class="left">
+                   
                 </div>
             </div>
-        </div>
+
+            <section id="pagination">
+
+            </section>
         </main>
 
         <div class="right-section">
@@ -192,6 +189,6 @@
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/spotify-web-api-node/5.1.1/spotify-web-api-node.min.js"></script>
-    <script src="genreSongs.js"></script>
+    <script src="party.js"></script>
 </body>
 </html>
