--- a/public/playlist.html
+++ b/public/playlist.html
@@ -24,8 +24,12 @@
                 <h5>Menu</h5>
                 <ul>
                     <li>
+                        <i class='bx bx-spa'></i>
+                        <a href="/relax">Relaxation</a>
+                    </li>
+                    <li>
                         <i class='bx bxs-bolt-circle' ></i>
-                        <a href="#">Explore</a>
+                        <a href="/party">Party</a>
                     </li>
                     <li>
                         <i class='bx bxs-music' ></i>
