completed the library section with generated recent tracks and albums. Plus imported saved tracks, albums, and playlists from spotify account.

--- a/public/albums.html
+++ b/public/albums.html
@@ -51,19 +51,23 @@
                 <ul>
                     <li>
                         <i class='bx bx-undo' ></i>
-                        <a href="#">Recent</a>
+                        <a href="/recent">Tracks</a>
                     </li>
                     <li>
                         <i class='bx bxs-photo-album' ></i>
-                        <a href="#">Albums</a>
+                        <a href="/recentAlbums">Albums</a>
                     </li>
                     <li>
                         <i class='bx bxs-heart' ></i>
-                        <a href="#">Favourites</a>
+                        <a href="/myTracks">MyTracks</a>
                     </li>
                     <li>
                         <i class='bx bxs-folder' ></i>
-                        <a href="#">Local</a>
+                        <a href="/myAlbums">MyAlbums</a>
+                    </li>
+                    <li>
+                        <i class='bx bxs-hot'></i>
+                        <a href="/myPlaylists">MyPlaylists</a>
                     </li>
                 </ul>
             </div>
