--- a/public/myPlaylists.html
+++ b/public/myPlaylists.html
@@ -193,6 +193,6 @@
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/spotify-web-api-node/5.1.1/spotify-web-api-node.min.js"></script>
-    <script src="new.js"></script>
+    <script src="myPlaylists.js"></script>
 </body>
 </html>
