--- a/public/myTracks.html
+++ b/public/myTracks.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="recommendations.css">
     <title>Music Player Platform</title>
 </head>
 <body>
@@ -125,15 +125,18 @@
 
             </header>
 
-            <div class="trending">
-                <div id="playlist-container" class="left">
-                   
+        <div class="playlist">
+            <div class="music-list">
+                    <div class="header">
+                        <h5>Saved Tracks</h5>
+                    </div>
+
+                
+                <div class="items">
+
                 </div>
             </div>
-
-            <section id="pagination">
-
-            </section>
+        </div>
         </main>
 
         <div class="right-section">
@@ -193,6 +196,6 @@
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/spotify-web-api-node/5.1.1/spotify-web-api-node.min.js"></script>
-    <script src="new.js"></script>
+    <script src="myTracks.js"></script>
 </body>
 </html>
