--- a/public/recentAlbums.html
+++ b/public/recentAlbums.html
@@ -126,7 +126,7 @@
             </header>
 
             <div class="trending">
-                <div id="playlist-container" class="left">
+                <div id="albums-container" class="left">
                    
                 </div>
             </div>
@@ -193,6 +193,6 @@
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/spotify-web-api-node/5.1.1/spotify-web-api-node.min.js"></script>
-    <script src="new.js"></script>
+    <script src="recentAlbums.js"></script>
 </body>
 </html>
