--- a/public/albums.html
+++ b/public/albums.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="popular.css">
     <title>Music Player Platform</title>
 </head>
 <body>
@@ -79,30 +79,8 @@
                         <i class='bx bxs-plus-square' ></i>
                         <a href="#">Create New</a>
                     </li>
-                    <li>
-                        <i class='bx bxs-caret-right-circle' ></i>
-                        <a href="#">Best of 2012</a>
-                    </li>
-                    <li>
-                        <i class='bx bxs-caret-right-circle' ></i>
-                        <a href="#">Best of 2019</a>
-                    </li>
-                    <li>
-                        <i class='bx bxs-caret-right-circle' ></i>
-                        <a href="#">Ed Sheeran</a>
-                    </li>
-                </ul>
-            </div>
 
-            <div class="playing">
-                <div class="top">
-                    <img src="assets/current.png">
-                    <h4>Apple<br>Homepod</h4>
-                </div>
-                <div class="bottom">
-                    <i class='bx bx-podcast' ></i>
-                    <p>Playing On Device</p>
-                </div>
+                </ul>
             </div>
 
         </aside>
