--- a/public/index.html
+++ b/public/index.html
@@ -74,37 +74,15 @@
 
             <div class="menu">
                 <h5>Playlist</h5>
-                <ul>
+                <ul id="playlist-creation">
                     <li>
                         <i class='bx bxs-plus-square' ></i>
-                        <a href="#">Create New</a>
+                        <a href="#" id="createNewPlaylist">Create New</a>
                     </li>
-                    <li>
-                        <i class='bx bxs-caret-right-circle' ></i>
-                        <a href="#">Best of 2012</a>
-                    </li>
-                    <li>
-                        <i class='bx bxs-caret-right-circle' ></i>
-                        <a href="#">Best of 2019</a>
-                    </li>
-                    <li>
-                        <i class='bx bxs-caret-right-circle' ></i>
-                        <a href="#">Ed Sheeran</a>
-                    </li>
+                    
                 </ul>
             </div>
-
-            <div class="playing">
-                <div class="top">
-                    <img src="assets/current.png">
-                    <h4>Apple<br>Homepod</h4>
-                </div>
-                <div class="bottom">
-                    <i class='bx bx-podcast' ></i>
-                    <p>Playing On Device</p>
-                </div>
-            </div>
-
+            
         </aside>
 
         <main>
@@ -189,14 +167,12 @@
 
 
             <div class="profile">
-                <i class='bx bxs-bell' ></i>
-                <i class='bx bxs-cog' ></i>
                 <div class="user">
                     <div class="left">
-                        <img src="assets/profile.png">
+                        <a href="/authenticate"><img src="assets/genres/pexels-keith-wako-89909.jpg"></a>
                     </div>
                     <div class="right">
-                        <h5>Jonathan Cuddy</h5>
+                        <a href="/authenticate"><h5 id="username">Sign-in To YouCountry?</h5></a>
                     </div>
                 </div>
             </div>
@@ -242,7 +218,6 @@
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/spotify-web-api-node/5.1.1/spotify-web-api-node.min.js"></script>
-    <script src="spotify.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
