--- a/public/index.html
+++ b/public/index.html
@@ -219,5 +219,7 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/spotify-web-api-node/5.1.1/spotify-web-api-node.min.js"></script>
     <script src="script.js"></script>
+    <script src="overlayAddToPlaylist.js"></script>
+    <script src="user.js"></script>
 </body>
 </html>
