--- a/public/youCountryPlaylist.html
+++ b/public/youCountryPlaylist.html
@@ -74,12 +74,12 @@
 
             <div class="menu">
                 <h5>Playlist</h5>
-                <ul>
+                <ul id="playlist-creation">
                     <li>
                         <i class='bx bxs-plus-square' ></i>
-                        <a href="#">Create New</a>
+                        <a href="#" id="createNewPlaylist">Create New</a>
                     </li>
-
+                    
                 </ul>
             </div>
 
@@ -122,346 +122,7 @@
             <div class="playlist">
                 <div class="music-list">
                     <div class="items">
-                        <!-- <div class="item">
-                            <div class="info">
-                                <p>01</p>
-                                <img src="assets/song-1.png">
-                                <div class="details">
-                                    <h5>Cover Me Up</h5>
-                                    <p>Morgan Wallen</p>
-                                </div>
-                            </div>
-                            <div class="actions">
-                                <p>03:45</p>
-                                <div class="icon">
-                                    <i class='bx bxs-right-arrow' ></i>
-                                </div>
-                                <i class='bx bxs-plus-square' ></i>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="info">
-                                <p>02</p>
-                                <img src="assets/song-1.png">
-                                <div class="details">
-                                    <h5>Cover Me Up</h5>
-                                    <p>Morgan Wallen</p>
-                                </div>
-                            </div>
-                            <div class="actions">
-                                <p>03:45</p>
-                                <div class="icon">
-                                    <i class='bx bxs-right-arrow' ></i>
-                                </div>
-                                <i class='bx bxs-plus-square' ></i>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="info">
-                                <p>03</p>
-                                <img src="assets/song-1.png">
-                                <div class="details">
-                                    <h5>Cover Me Up</h5>
-                                    <p>Morgan Wallen</p>
-                                </div>
-                            </div>
-                            <div class="actions">
-                                <p>03:45</p>
-                                <div class="icon">
-                                    <i class='bx bxs-right-arrow' ></i>
-                                </div>
-                                <i class='bx bxs-plus-square' ></i>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="info">
-                                <p>04</p>
-                                <img src="assets/song-1.png">
-                                <div class="details">
-                                    <h5>Cover Me Up</h5>
-                                    <p>Morgan Wallen</p>
-                                </div>
-                            </div>
-                            <div class="actions">
-                                <p>03:45</p>
-                                <div class="icon">
-                                    <i class='bx bxs-right-arrow' ></i>
-                                </div>
-                                <i class='bx bxs-plus-square' ></i>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="info">
-                                <p>05</p>
-                                <img src="assets/song-1.png">
-                                <div class="details">
-                                    <h5>Cover Me Up</h5>
-                                    <p>Morgan Wallen</p>
-                                </div>
-                            </div>
-                            <div class="actions">
-                                <p>03:45</p>
-                                <div class="icon">
-                                    <i class='bx bxs-right-arrow' ></i>
-                                </div>
-                                <i class='bx bxs-plus-square' ></i>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="info">
-                                <p>06</p>
-                                <img src="assets/song-1.png">
-                                <div class="details">
-                                    <h5>Cover Me Up</h5>
-                                    <p>Morgan Wallen</p>
-                                </div>
-                            </div>
-                            <div class="actions">
-                                <p>03:45</p>
-                                <div class="icon">
-                                    <i class='bx bxs-right-arrow' ></i>
-                                </div>
-                                <i class='bx bxs-plus-square' ></i>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="info">
-                                <p>07</p>
-                                <img src="assets/song-1.png">
-                                <div class="details">
-                                    <h5>Cover Me Up</h5>
-                                    <p>Morgan Wallen</p>
-                                </div>
-                            </div>
-                            <div class="actions">
-                                <p>03:45</p>
-                                <div class="icon">
-                                    <i class='bx bxs-right-arrow' ></i>
-                                </div>
-                                <i class='bx bxs-plus-square' ></i>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="info">
-                                <p>08</p>
-                                <img src="assets/song-2.png">
-                                <div class="details">
-                                    <h5>Cosmic Love</h5>
-                                    <p>Florence and the Machine</p>
-                                </div>
-                            </div>
-                            <div class="actions">
-                                <p>05:30</p>
-                                <div class="icon">
-                                    <i class='bx bxs-right-arrow' ></i>
-                                </div>
-                                <i class='bx bxs-plus-square' ></i>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="info">
-                                <p>09</p>
-                                <img src="assets/song-3.png">
-                                <div class="details">
-                                    <h5>No Guidance</h5>
-                                    <p>Chris Brown</p>
-                                </div>
-                            </div>
-                            <div class="actions">
-                                <p>04:12</p>
-                                <div class="icon">
-                                    <i class='bx bxs-right-arrow' ></i>
-                                </div>
-                                <i class='bx bxs-plus-square' ></i>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="info">
-                                <p>10</p>
-                                <img src="assets/song-4.png">
-                                <div class="details">
-                                    <h5>Halo</h5>
-                                    <p>Beyonce</p>
-                                </div>
-                            </div>
-                            <div class="actions">
-                                <p>03:10</p>
-                                <div class="icon">
-                                    <i class='bx bxs-right-arrow' ></i>
-                                </div>
-                                <i class='bx bxs-plus-square' ></i>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="info">
-                                <p>10</p>
-                                <img src="assets/song-4.png">
-                                <div class="details">
-                                    <h5>Halo</h5>
-                                    <p>Beyonce</p>
-                                </div>
-                            </div>
-                            <div class="actions">
-                                <p>03:10</p>
-                                <div class="icon">
-                                    <i class='bx bxs-right-arrow' ></i>
-                                </div>
-                                <i class='bx bxs-plus-square' ></i>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="info">
-                                <p>10</p>
-                                <img src="assets/song-4.png">
-                                <div class="details">
-                                    <h5>Halo</h5>
-                                    <p>Beyonce</p>
-                                </div>
-                            </div>
-                            <div class="actions">
-                                <p>03:10</p>
-                                <div class="icon">
-                                    <i class='bx bxs-right-arrow' ></i>
-                                </div>
-                                <i class='bx bxs-plus-square' ></i>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="info">
-                                <p>10</p>
-                                <img src="assets/song-4.png">
-                                <div class="details">
-                                    <h5>Halo</h5>
-                                    <p>Beyonce</p>
-                                </div>
-                            </div>
-                            <div class="actions">
-                                <p>03:10</p>
-                                <div class="icon">
-                                    <i class='bx bxs-right-arrow' ></i>
-                                </div>
-                                <i class='bx bxs-plus-square' ></i>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="info">
-                                <p>10</p>
-                                <img src="assets/song-4.png">
-                                <div class="details">
-                                    <h5>Halo</h5>
-                                    <p>Beyonce</p>
-                                </div>
-                            </div>
-                            <div class="actions">
-                                <p>03:10</p>
-                                <div class="icon">
-                                    <i class='bx bxs-right-arrow' ></i>
-                                </div>
-                                <i class='bx bxs-plus-square' ></i>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="info">
-                                <p>10</p>
-                                <img src="assets/song-4.png">
-                                <div class="details">
-                                    <h5>Halo</h5>
-                                    <p>Beyonce</p>
-                                </div>
-                            </div>
-                            <div class="actions">
-                                <p>03:10</p>
-                                <div class="icon">
-                                    <i class='bx bxs-right-arrow' ></i>
-                                </div>
-                                <i class='bx bxs-plus-square' ></i>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="info">
-                                <p>10</p>
-                                <img src="assets/song-4.png">
-                                <div class="details">
-                                    <h5>Halo</h5>
-                                    <p>Beyonce</p>
-                                </div>
-                            </div>
-                            <div class="actions">
-                                <p>03:10</p>
-                                <div class="icon">
-                                    <i class='bx bxs-right-arrow' ></i>
-                                </div>
-                                <i class='bx bxs-plus-square' ></i>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="info">
-                                <p>10</p>
-                                <img src="assets/song-4.png">
-                                <div class="details">
-                                    <h5>Halo</h5>
-                                    <p>Beyonce</p>
-                                </div>
-                            </div>
-                            <div class="actions">
-                                <p>03:10</p>
-                                <div class="icon">
-                                    <i class='bx bxs-right-arrow' ></i>
-                                </div>
-                                <i class='bx bxs-plus-square' ></i>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="info">
-                                <p>10</p>
-                                <img src="assets/song-4.png">
-                                <div class="details">
-                                    <h5>Halo</h5>
-                                    <p>Beyonce</p>
-                                </div>
-                            </div>
-                            <div class="actions">
-                                <p>03:10</p>
-                                <div class="icon">
-                                    <i class='bx bxs-right-arrow' ></i>
-                                </div>
-                                <i class='bx bxs-plus-square' ></i>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="info">
-                                <p>10</p>
-                                <img src="assets/song-4.png">
-                                <div class="details">
-                                    <h5>Halo</h5>
-                                    <p>Beyonce</p>
-                                </div>
-                            </div>
-                            <div class="actions">
-                                <p>03:10</p>
-                                <div class="icon">
-                                    <i class='bx bxs-right-arrow' ></i>
-                                </div>
-                                <i class='bx bxs-plus-square' ></i>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="info">
-                                <p>10</p>
-                                <img src="assets/song-4.png">
-                                <div class="details">
-                                    <h5>Halo</h5>
-                                    <p>Beyonce</p>
-                                </div>
-                            </div>
-                            <div class="actions">
-                                <p>03:10</p>
-                                <div class="icon">
-                                    <i class='bx bxs-right-arrow' ></i>
-                                </div>
-                                <i class='bx bxs-plus-square' ></i>
-                            </div>
-                        </div> -->
+                        
                     </div>
                 </div>
             </div>
@@ -471,14 +132,12 @@
 
 
             <div class="profile">
-                <i class='bx bxs-bell' ></i>
-                <i class='bx bxs-cog' ></i>
                 <div class="user">
                     <div class="left">
-                        <img src="assets/profile.png">
+                        <a href="/authenticate"><img src="assets/genres/pexels-keith-wako-89909.jpg"></a>
                     </div>
                     <div class="right">
-                        <h5>Jonathan Cuddy</h5>
+                        <a href="/authenticate"><h5 id="username">Sign-in To YouCountry?</h5></a>
                     </div>
                 </div>
             </div>
@@ -525,5 +184,7 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/spotify-web-api-node/5.1.1/spotify-web-api-node.min.js"></script>
     <script src="youCountryPlaylist.js"></script>
+    <script src="user.js"></script>
+    <script src="overlayAddToPlaylist.js"></script>
 </body>
 </html>
