search works for all pages, added hide sidebar for all pages, added styling to filter for search. Backend routes for liking tracks,albums, and playlists. Now generating trending track on index page but its just another recommendation technically.

--- a/public/index.html
+++ b/public/index.html
@@ -113,16 +113,12 @@
                 <div class="left">
                     <h5>Trending Now!</h5>
                     <div class="info">
-                        <h2>Empty Space</h2>
-                        <h4>James Arthur</h4>
-                        <h5>74 Million Plays</h5>
-                        <div class="buttons">
-                            <button>Listen Now</button>
-                            <i class='bx bxs-heart' ></i>
-                        </div>
+
                     </div>
                 </div>
-                <img src="assets/trend.png">
+                <div id="trending-image-rec">
+
+                </div>
             </div>
 
             <div class="playlist">
@@ -227,5 +223,6 @@
     <script src="script.js"></script>
     <script src="overlayAddToPlaylist.js"></script>
     <script src="user.js"></script>
+    <script src="menuSidebar.js"></script>
 </body>
 </html>
