--- a/public/playlist.html
+++ b/public/playlist.html
@@ -96,9 +96,14 @@
                 </div>
 
                 <div class="search">
-                    <i class='bx bx-search' ></i>
-                    <input type="text" 
-                    placeholder="Type here to search">
+                    <i class='bx bx-search'></i>
+                    <input type="text" placeholder="Type here to search">
+                    <select id="filter">
+                        <option value="tracks">Tracks</option>
+                        <option value="playlists">Playlists</option>
+                        <option value="artists">Artists</option>
+                        <option value="albums">Albums</option>
+                    </select>
                 </div>
 
             </header>
@@ -186,5 +191,6 @@
     <script src="playlist.js"></script>
     <script src="user.js"></script>
     <script src="overlayAddToPlaylist.js"></script>
+    <script src="menuSidebar.js"></script>
 </body>
 </html>
