--- a/public/searchPlaylists.html
+++ b/public/searchPlaylists.html
@@ -171,5 +171,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/spotify-web-api-node/5.1.1/spotify-web-api-node.min.js"></script>
     <script src="search.js"></script>
     <script src="user.js"></script>
+    <script src="menuSidebar.js"></script>
 </body>
 </html>
