--- a/public/searchTracks.html
+++ b/public/searchTracks.html
@@ -175,5 +175,6 @@
     <script src="search.js"></script>
     <script src="user.js"></script>
     <script src="overlayAddToPlaylist.js"></script>
+    <script src="menuSidebar.js"></script>
 </body>
 </html>
