music correctly plays on index recommended tracks loads all info and displays the time correctly resetting on changing tracks or duration end with live changes to progress bar and current time.

--- a/public/index.html
+++ b/public/index.html
@@ -195,8 +195,9 @@
                         </div>
                         <div class="progress">
                             <p class="current-time">00:00</p>
-                            <div class="active-line"></div>
-                            <div class="deactive-line"></div>
+                            <div class="progress-bar">
+                                <div class="progress-circle"></div>
+                            </div>
                             <p class="total-time">00:00</p>
                         </div>
                     </div>
@@ -221,6 +222,7 @@
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/spotify-web-api-node/5.1.1/spotify-web-api-node.min.js"></script>
+    <script src="https://sdk.scdn.co/spotify-player.js"></script>
     <script src="spotify.js"></script>
     <script src="script.js"></script>
     <script src="overlayAddToPlaylist.js"></script>
