time and progress bar work when playing and pausing tracks. The next and previous buttons work 90% of the time but issues arise when the spotify api has a bad gateway error

--- a/public/index.html
+++ b/public/index.html
@@ -207,9 +207,10 @@
                 <div class="player-actions">
                     <div class="buttons">
                         <i class='bx bx-repeat' ></i>
-                        <i class='bx bx-first-page' ></i>
+                        <i class='bx bx-first-page previous-song'></i>
                         <i class='bx bxs-right-arrow play-button' ></i>
-                        <i class='bx bx-last-page' ></i>
+                        <i class='bx bx-pause pause-button'></i>
+                        <i class='bx bx-last-page next-song'></i>
                         <i class='bx bx-transfer-alt' ></i>
                     </div>
                     <div class="lyrics">
