repeat button visually and by means of the repeatMode variable is working correctly need to link to handleTrackEnd

--- a/public/index.html
+++ b/public/index.html
@@ -206,7 +206,10 @@
 
                 <div class="player-actions">
                     <div class="buttons">
-                        <i class='bx bx-repeat' id="repeat-button"></i>
+                        <div id="repeat-buttons-container">
+                            <i class='bx bx-repeat' id="repeat-button"></i>
+                            <i class='bx bx-revision' id="repeat-song-button"></i>
+                        </div>
                         <i class='bx bx-first-page previous-song'></i>
                         <i class='bx bxs-right-arrow play-button' ></i>
                         <i class='bx bx-pause pause-button'></i>
