Music player is working on all pages with tracks except genres and doesnt have functionality to work on reload or while browsing.

--- a/public/youCountryPlaylist.html
+++ b/public/youCountryPlaylist.html
@@ -194,6 +194,9 @@
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/spotify-web-api-node/5.1.1/spotify-web-api-node.min.js"></script>
+    <script src="https://sdk.scdn.co/spotify-player.js"></script>
+    <script src="spotify.js"></script>
+    <script src="musicPlayer.js"></script>
     <script src="youCountryPlaylist.js"></script>
     <script src="user.js"></script>
     <script src="overlayAddToPlaylist.js"></script>
