Music player persists across page loads. Future improvement could be to allow entirity of data to persist so user can listen and naviagate through a selected playlist while browsing. Project function and visuals completed.

--- a/public/genreSongs.html
+++ b/public/genreSongs.html
@@ -15,7 +15,7 @@
                 <button class="menu-btn" id="menu-close">
                     <i class='bx bx-log-out-circle' ></i>
                 </button>
-                <i class='bx bx-pulse'></i>
+                <i class='bx bx-pulse' id="pulse-icon"></i>
                 <a href="/">YouCountry?</a>
             </div>
 
