--- a/public/party.html
+++ b/public/party.html
@@ -15,7 +15,7 @@
                 <button class="menu-btn" id="menu-close">
                     <i class='bx bx-log-out-circle' ></i>
                 </button>
-                <i class='bx bx-pulse'></i>
+                <i class='bx bx-pulse' id="pulse-icon"></i>
                 <a href="/">YouCountry?</a>
             </div>
 
@@ -188,6 +188,8 @@
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/spotify-web-api-node/5.1.1/spotify-web-api-node.min.js"></script>
+    <script src="https://sdk.scdn.co/spotify-player.js"></script>
+    <script src="spotify.js"></script>
     <script src="party.js"></script>
     <script src="user.js"></script>
     <script src="menuSidebar.js"></script>
