--- a/public/recommendations.html
+++ b/public/recommendations.html
@@ -15,7 +15,7 @@
                 <button class="menu-btn" id="menu-close">
                     <i class='bx bx-log-out-circle' ></i>
                 </button>
-                <i class='bx bx-pulse'></i>
+                <i class='bx bx-pulse' id="pulse-icon"></i>
                 <a href="/">YouCountry?</a>
             </div>
 
